Finalizando layout do projeto

--- a/frontweb/src/assets/styles/custom.scss
+++ b/frontweb/src/assets/styles/custom.scss
@@ -2,7 +2,7 @@ $theme-colors: (
   'primary': #F78B00,
 );
 
-$body-bg: #E5E5E5;
+$body-bg: #fff;
 $body-color: #00285F;
 
 @import '~bootstrap/scss/bootstrap.scss';
